# polytool

./: .gitignore  CLAUDE.md  FIXING-FFFF.md  POLYTRAY.md  README.md  RE_FINDINGS.txt  br_probe.py  bw_flash.py  clockwork_client.py  device_identity.py  device_isolate.py  device_settings.py  device_settings_db.py  devices.py  firmware.py  fix_devices_config.py  fleet_setid_fix.py  fleet_target.py  fwu_clean_test.py  fwu_conversation.py  fwu_correct_test.py  fwu_exclusive.py  fwu_explore.py  fwu_flash.py  fwu_multipath.py  fwu_pipe_probe.py  fwu_probe.py  fwu_probe2.py  fwu_rid3_probe.py  fwu_signon.py  fwu_signon2.py  fwu_test.py  http_api.py  lcs_client.py  lcs_control.py  lens_settings.py  lensapi.py  lensserver.py  menu.py  monitor_legacyhost.py  (+19 more)
data/: DeviceSetting.json  Devices.config  dfu_devices.json  settingsCategories.json
presets/: call_center.json  office_standard.json  quiet_mode.json
probes/: dect_settings_probe.py  fwu_probe.py  hid_helpers.py  lcs_client_probe.py  list_pipes.py  polybus_inject.py  polybus_probe_endpoints.py  polybus_setid.py  polybus_trace.py  re_setid.py  setid_probe.py  trace_dfu_writes.py  trace_processes.py  trace_setid_full.py  trace_setid_protocol.py  trace_setid_routing.py  trace_setid_writes.py  trace_writes_simple.py  trigger_dfu.py
tests/: test_device_settings_db.py  test_devices.py  test_http_api.py  test_protocol.py  test_settings.py
web/: app.js  index.html  style.css
web_admin/: app.js  index.html  style.css
